merged work from terracotta-api-refactoring to trunk