@@ -5,7 +5,6 @@
 package com.tc.test.server.appserver.deployment;
 
 import org.apache.commons.httpclient.HttpClient;
-import org.apache.commons.io.IOUtils;
 import org.codehaus.cargo.container.deployable.WAR;
 import org.codehaus.cargo.container.property.RemotePropertySet;
 import org.codehaus.cargo.container.tomcat.Tomcat5xRemoteContainer;
@@ -27,17 +26,14 @@ import com.meterware.httpunit.WebResponse;
 import com.tc.test.TestConfigObject;
 import com.tc.test.server.ServerResult;
 import com.tc.test.server.appserver.AppServer;
-import com.tc.test.server.appserver.AppServerFactory;
 import com.tc.test.server.appserver.AppServerInstallation;
+import com.tc.test.server.appserver.NewAppServerFactory;
 import com.tc.test.server.appserver.StandardAppServerParameters;
+import com.tc.test.server.tcconfig.StandardTerracottaAppServerConfig;
+import com.tc.test.server.tcconfig.TerracottaServerConfigGenerator;
 import com.tc.test.server.util.AppServerUtil;
-import com.tc.test.server.util.TcConfigBuilder;
-import com.tc.text.Banner;
-import com.tc.util.runtime.Os;
-import com.tc.util.runtime.Vm;
 
 import java.io.File;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.net.MalformedURLException;
 import java.util.HashMap;
@@ -48,57 +44,74 @@ import javax.management.MBeanServerConnection;
 import junit.framework.Assert;
 
 public class GenericServer extends AbstractStoppable implements WebApplicationServer {
-  private static final boolean        GC_LOGGGING     = false;
-  private static final boolean        ENABLE_DEBUGGER = false;
 
   private int                         jmxRemotePort;
+
   private int                         rmiRegistryPort;
+
   int                                 contextId       = 1;
-  private AppServerFactory            factory;
+
+  private NewAppServerFactory         factory;
+
   private AppServer                   server;
+
   private StandardAppServerParameters parameters;
+
   private ServerResult                result;
+
   private final AppServerInstallation installation;
+
   private final Map                   proxyBuilderMap = new HashMap();
+
   static final boolean                MONKEY_MODE     = true;
+
   private ProxyBuilder                proxyBuilder    = null;
 
-  public GenericServer(TestConfigObject config, AppServerFactory factory, AppServerInstallation installation,
+  public GenericServer(TestConfigObject config, NewAppServerFactory factory, AppServerInstallation installation,
                        FileSystemPath tcConfigPath, int serverId, File tempDir) throws Exception {
-    this(config, factory, installation, new TcConfigBuilder(tcConfigPath.getFile()), serverId, tempDir);
+    this(config, factory, installation, new SpringTerracottaAppServerConfig(tcConfigPath.getFile()), serverId, tempDir);
   }
 
-  public GenericServer(TestConfigObject config, AppServerFactory factory, AppServerInstallation installation,
-                       TcConfigBuilder tcConfigbuilder, int serverId, File tempDir) throws Exception {
+  public GenericServer(TestConfigObject config, NewAppServerFactory factory, AppServerInstallation installation,
+                       StandardTerracottaAppServerConfig terracottaConfig, int serverId, File tempDir) throws Exception {
     this.factory = factory;
     this.installation = installation;
     this.rmiRegistryPort = AppServerUtil.getPort();
     this.jmxRemotePort = AppServerUtil.getPort();
-    int appId = AppServerFactory.getCurrentAppServerId();
 
     parameters = (StandardAppServerParameters) factory.createParameters("server_" + serverId);
 
+    TerracottaServerConfigGenerator configGenerator = new TerracottaServerConfigGenerator(tempDir, terracottaConfig);
     File bootJarFile = new File(config.normalBootJar());
-    File tcConfigFile = new File(tempDir, "tc-config.xml");
-    tcConfigbuilder.saveToFile(tcConfigFile);
 
-    // enable DSO
-    parameters.appendSysProp("tc.config", tcConfigFile.getAbsolutePath());
-    parameters.appendJvmArgs("-Xbootclasspath/p:" + bootJarFile.getAbsolutePath());
-    parameters.appendSysProp("tc.classpath", "file://" + writeTerracottaClassPathFile());
-    parameters.appendSysProp("tc.session.classpath", config.sessionClasspath());
+    /*
+     * String[] commandLine = new String[] { "-f", configGenerator.configPath()};
+     * StandardTVSConfigurationSetupManagerFactory configManagerFactory = // new
+     * StandardTVSConfigurationSetupManagerFactory(commandLine, false, new FatalIllegalConfigurationChangeHandler());
+     * 
+     * boolean quiet = false; TCLogger tclogger = quiet ? new NullTCLogger() : CustomerLogging.getConsoleLogger();
+     * L1TVSConfigurationSetupManager configManager =
+     * configManagerFactory.createL1TVSConfigurationSetupManager(tclogger);
+     * 
+     * ClassLoader systemLoader = ClassLoader.getSystemClassLoader(); StandardDSOClientConfigHelper configHelper = new
+     * StandardDSOClientConfigHelper(configManager, false);
+     * 
+     * 
+     * new BootJarTool(configHelper, bootJarFile, systemLoader, quiet).generateJar();
+     */
 
-    // glassfish fails with these options on
-    if (appId != AppServerFactory.GLASSFISH) {
-      parameters.appendSysProp("com.sun.management.jmxremote");
-      parameters.appendSysProp("com.sun.management.jmxremote.authenticate", false);
-      parameters.appendSysProp("com.sun.management.jmxremote.ssl", false);
-      parameters.appendSysProp("com.sun.management.jmxremote.port", this.jmxRemotePort);
+    parameters.enableDSO(configGenerator, bootJarFile);
+    parameters.appendSysProp("com.sun.management.jmxremote");
+    parameters.appendSysProp("com.sun.management.jmxremote.authenticate", false);
+    parameters.appendSysProp("com.sun.management.jmxremote.ssl", false);
+
+    // needed for websphere jmx bug
+    if (NewAppServerFactory.WEBSPHERE.equals(config.appserverFactoryName())) {
+      parameters.appendSysProp("javax.management.builder.initial", "");
     }
 
+    parameters.appendSysProp("com.sun.management.jmxremote.port", this.jmxRemotePort);
     parameters.appendSysProp("rmi.registry.port", this.rmiRegistryPort);
-    parameters.appendSysProp("tc.tests.configuration.modules.url", System
-        .getProperty("tc.tests.configuration.modules.url"));
 
     String[] params = { "tc.classloader.writeToDisk", "tc.objectmanager.dumpHierarchy", "aspectwerkz.deployment.info",
         "aspectwerkz.details", "aspectwerkz.gen.closures", "aspectwerkz.dump.pattern", "aspectwerkz.dump.closures",
@@ -109,18 +122,17 @@ public class GenericServer extends AbstractStoppable implements WebApplicationSe
       }
     }
 
-    enableDebug(serverId);
-
-    // app server specific system props
-    switch (appId) {
-      case AppServerFactory.TOMCAT:
-      case AppServerFactory.JBOSS:
-        parameters.appendJvmArgs("-Djvmroute=" + "server_" + serverId);
-        break;
-      case AppServerFactory.WEBSPHERE:
-        parameters.appendSysProp("javax.management.builder.initial", "");
-        break;
+    if (!MONKEY_MODE) {
+      int debugPort = AppServerUtil.getPort();
+      logger.info("Debug port=" + debugPort);
+      parameters.appendJvmArgs(" -Xdebug -Xrunjdwp:transport=dt_socket,address=" + debugPort + ",server=y,suspend=n ");
+      // -Daspectwerkz.transform.verbose=true -Daspectwerkz.transform.details=true
+      parameters.appendSysProp("aspectwerkz.transform.verbose", true);
+      parameters.appendSysProp("aspectwerkz.transform.details", true);
     }
+
+    parameters.appendSysProp("tc.tests.configuration.modules.url", System
+        .getProperty("tc.tests.configuration.modules.url"));
 
     proxyBuilderMap.put(RmiServiceExporter.class, new RMIProxyBuilder());
     proxyBuilderMap.put(HttpInvokerServiceExporter.class, new HttpInvokerProxyBuilder());
@@ -128,30 +140,6 @@ public class GenericServer extends AbstractStoppable implements WebApplicationSe
 
   public StandardAppServerParameters getServerParameters() {
     return parameters;
-  }
-
-  public int getPort() {
-    if (result == null) { throw new IllegalStateException("Server has not started."); }
-    return result.serverPort();
-  }
-
-  private void enableDebug(int serverId) {
-    if (GC_LOGGGING && !Vm.isIBM()) {
-      parameters.appendJvmArgs("-verbose:gc");
-      parameters.appendJvmArgs("-XX:+PrintGCDetails");
-      parameters.appendJvmArgs("-Xloggc:"
-                               + new File(this.installation.sandboxDirectory(), "server_" + serverId + "-gc.log")
-                                   .getAbsolutePath());
-    }
-
-    if (ENABLE_DEBUGGER) {
-      int debugPort = 8000 + serverId;
-      parameters.appendJvmArgs("-Xdebug");
-      parameters.appendJvmArgs("-Xrunjdwp:server=y,transport=dt_socket,address=" + debugPort + ",suspend=y");
-      parameters.appendSysProp("aspectwerkz.transform.verbose", true);
-      parameters.appendSysProp("aspectwerkz.transform.details", true);
-      Banner.warnBanner("Waiting for debugger to connect on port " + debugPort);
-    }
   }
 
   private class RMIProxyBuilder implements ProxyBuilder {
@@ -247,16 +235,10 @@ public class GenericServer extends AbstractStoppable implements WebApplicationSe
     server.stop();
   }
 
-  /**
-   * url: /<CONTEXT>/<MAPPING>?params=etc
-   */
   public WebResponse ping(String url) throws MalformedURLException, IOException, SAXException {
     return ping(url, new WebConversation());
   }
 
-  /**
-   * url: /<CONTEXT>/<MAPPING>?params=etc
-   */
   public WebResponse ping(String url, WebConversation wc) throws MalformedURLException, IOException, SAXException {
     String fullURL = "http://localhost:" + result.serverPort() + url;
     logger.debug("Getting page: " + fullURL);
@@ -304,29 +286,6 @@ public class GenericServer extends AbstractStoppable implements WebApplicationSe
   }
 
   // end tomcat specific code
-
-  private String writeTerracottaClassPathFile() {
-    FileOutputStream fos = null;
-
-    try {
-      File tempFile = File.createTempFile("tc-classpath", parameters.instanceName());
-      tempFile.deleteOnExit();
-      fos = new FileOutputStream(tempFile);
-      fos.write(System.getProperty("java.class.path").getBytes());
-
-      String rv = tempFile.getAbsolutePath();
-      if (Os.isWindows()) {
-        rv = "/" + rv;
-      }
-
-      return rv;
-    } catch (IOException ioe) {
-      throw new AssertionError(ioe);
-    } finally {
-      IOUtils.closeQuietly(fos);
-    }
-
-  }
 
   public Server restart() throws Exception {
     stop();
